# logonbox-vpn-drivers

./: .gitignore  Jenkinsfile  LICENSE  README.md  WIREGUARD-LICENSE.txt  WireGuardNT-LICENSE.txt  pom.xml
dll/: pom.xml
dll/examples/c/: meson.build  program.c
dll/examples/csharp/: LbvDll.cs  Program.cs  csharp.sln
dll/examples/python/: program.py
dll/src/main/java/com/logonbox/vpn/dll/: VpnDll.java
dll/src/main/resources/: logging.properties
lbvq/: README.md  pom.xml
lbvq/src/main/java/: module-info.java
lbvq/src/main/java/com/logonbox/vpn/quick/: AbstractCommand.java  Lbv.java  LbvQuick.java  (+1 more)
lib/: pom.xml
lib/src/main/java/: module-info.java
linux/: pom.xml
linux/src/main/java/: module-info.java
linux/src/main/resources/linux-aarch64/: wg  wireguard-go
linux/src/main/resources/linux-x86-64/: wg  wireguard-go
macos/: pom.xml
macos/src/main/java/: module-info.java
macos/src/main/resources/macosx-aarch64/: wg  wireguard-go
macos/src/main/resources/macosx-x86-64/: wg  wireguard-go
remote/: pom.xml
remote/controller/: pom.xml
remote/controller/src/main/java/: module-info.java
remote/lib/: pom.xml
remote/lib/src/main/java/: module-info.java
remote/node/: pom.xml
remote/node/src/main/java/: module-info.java
src/templates/: MIT.txt
tools/: README.md  pom.xml
tools/src/main/java/: module-info.java
tools/src/main/resources/: macos-task.plist  windows-task.xml
windows/: pom.xml
windows/src/main/java/: module-info.java
windows/src/network-configuration-service/: .gitignore  meson.build  network-configuration-service.c
(+119 files in other folders)
